Closed
Bug 419866
Opened 17 years ago
Closed 17 years ago
"Recent Tags" list in smart bookmarks no longer seems to be working
Categories
(Firefox :: Bookmarks & History, defect, P2)
Firefox
Bookmarks & History
Tracking
()
VERIFIED
FIXED
Firefox 3
People
(Reporter: deb, Assigned: ondrej)
References
Details
Attachments
(1 file, 1 obsolete file)
|
8.23 KB,
patch
|
dietrich
:
review+
beltzner
:
approval1.9b4+
|
Details | Diff | Splinter Review |
Not sure when it started failing but must have been recently. I added a new bookmark with a unique tag this morning (with every intention of using "Recent Tags" to find it again later) and it doesn't show up in the Recent Tags list.
Flags: blocking-firefox3?
Comment 1•17 years ago
|
||
dria: Please post the Build ID you are using or seeing this on when you report bugs. We have seen bugs specific to 10.4 or 10.5 on occasion, so this especially helpful when you are running on mac. Thanks.
| Assignee | ||
Comment 2•17 years ago
|
||
Does restart help? May be there is an issue with refreshing. Does the query display anything else or is it empty?
Assignee: nobody → ondrej
Comment 3•17 years ago
|
||
Not working in Vista HP either with today's build.
Also appears that adding a new Bookmark is not being added to Smart Bookmarks either.
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b4pre) Gecko/2008022704 Minefield/3.0b4pre Firefox/3.0 ID:2008022704
Updated•17 years ago
|
OS: Mac OS X → All
Hardware: Macintosh → All
| Reporter | ||
Comment 4•17 years ago
|
||
Sorry, I almost always make sure i'm up to date before filing. Current build ID is Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008022704 Minefield/3.0b4pre.
Restarting doesn't help.
| Assignee | ||
Comment 5•17 years ago
|
||
I can confirm this. Something wrong with limiting to 10 recent tags (bug 385245). It is visible in Places Library. When you click in left pane on "Smart Bookmarks" you can then on right pane change maxResults of the place uri to 12 or some bigger number, the tag shows up in this case.
Tagging seems to work fine, so I'm lovering the severity to normal, but will deliver patch today or tomorrow.
Severity: major → normal
Status: NEW → ASSIGNED
| Assignee | ||
Comment 6•17 years ago
|
||
History queries for sidebar and for recent tags are special queries that return list of other queries. They are all QUERY_TYPE_HISTORY. However, for this type of query it is not possible to sort by date fields (dateAdded and lastModified).
However, RESULTS_AS_TAG_QUERY is based on bookmarks rather than history and date fields are available. Changing the queryType to QUERY_TYPE_BOOKMARKS is not possible due to other implications, so the change in this patch allows sorting by date for this type explicitly.
There is one line in the patch which fixes wrong line ending. I hope it is not necessary to create a separate bug for this.
Attachment #306055 -
Flags: review?(dietrich)
| Assignee | ||
Comment 7•17 years ago
|
||
Dietrich noted, that we should sort rather by lastModified than dateAdded (which was used already before bug 385245 to excuse myself ;-).
NIGHTLY USERS ATTENTION PLEASE!!!
Please follow these steps to fix the URI of the "Recent Tags" to sort correctly, no automatic fix is included in this patch for you.
1) Open menu Bookmarks->Show All Bookmarks
2) Locate "Smart Bookmarks" folder and click on it in the left pane.
3) Click on "Recent Tags" on right side.
4) In the lower pane change in location sort=12 to sort=14.
Thanks.
Attachment #306055 -
Attachment is obsolete: true
Attachment #306077 -
Flags: review?(dietrich)
Attachment #306055 -
Flags: review?(dietrich)
Comment 8•17 years ago
|
||
Comment on attachment 306077 [details] [diff] [review]
Sort by lastModified rather than dateAdded
r=me, thanks.
drivers: minor change that fixes a regression from a P1 B4 blocker.
Attachment #306077 -
Flags: review?(dietrich)
Attachment #306077 -
Flags: review+
Attachment #306077 -
Flags: approval1.9b4?
Updated•17 years ago
|
Target Milestone: --- → Firefox 3 beta4
Updated•17 years ago
|
Target Milestone: Firefox 3 beta4 → Firefox 3
Comment 9•17 years ago
|
||
Comment on attachment 306077 [details] [diff] [review]
Sort by lastModified rather than dateAdded
a1.9b4=beltzner
Attachment #306077 -
Flags: approval1.9b4? → approval1.9b4+
Updated•17 years ago
|
Keywords: checkin-needed
Comment 10•17 years ago
|
||
Checking in toolkit/components/places/src/nsNavHistory.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.cpp,v <-- nsNavHistory.cpp
new revision: 1.265; previous revision: 1.264
done
Checking in browser/base/content/browser-places.js;
/cvsroot/mozilla/browser/base/content/browser-places.js,v <-- browser-places.js
new revision: 1.100; previous revision: 1.99
done
Checking in browser/components/nsBrowserGlue.js;
/cvsroot/mozilla/browser/components/nsBrowserGlue.js,v <-- nsBrowserGlue.js
new revision: 1.60; previous revision: 1.59
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: Firefox 3 → Firefox 3 beta4
Comment 11•17 years ago
|
||
In comment #7 above:
1) Open menu Bookmarks->Show All Bookmarks
2) Locate "Smart Bookmarks" folder and click on it in the left pane.
3) Click on "Recent Tags" on right side.
4) In the lower pane change in location sort=12 to sort=14.
I don't understand what to do with step 4) I don't see anything in that pane that relates to location.
I see Name & Description text boxes...
Can you please clarify ?
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b4pre) Gecko/2008022802 Minefield/3.0b4pre Firefox/3.0 ID:2008022802
| Assignee | ||
Comment 12•17 years ago
|
||
(In reply to comment #11)
> I don't understand what to do with step 4) I don't see anything in that pane
> that relates to location.
> I see Name & Description text boxes...
>
> Can you please clarify ?
Could it be that you have clicked in point 3 on the left pane rather than on the right pane?
Comment 13•17 years ago
|
||
I don't know how, but perhaps by Smart Bookmarks folder was corrupt, I toggled the pref "browser.places.createdSmartBookmarks" and it created a new folder that seems to be working and I was able to edit the location as per instructions.
thanks
Updated•17 years ago
|
Flags: blocking-firefox3? → blocking-firefox3+
Priority: -- → P2
Target Milestone: Firefox 3 beta4 → Firefox 3
Comment 14•17 years ago
|
||
Sorry that I have to reopen this bug but it isn't completely fixed. At least running the build Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b4pre) Gecko/2008022806 Minefield/3.0b4pre ID:2008022806 doesn't show up the new added tag under Smart Bookmarks of the Bookmarks Toolbar. Within the Library the tag is listed under Recent tags.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 15•17 years ago
|
||
(In reply to comment #14)
> Sorry that I have to reopen this bug but it isn't completely fixed. At least
> running the build Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b4pre)
> Gecko/2008022806 Minefield/3.0b4pre ID:2008022806 doesn't show up the new added
> tag under Smart Bookmarks of the Bookmarks Toolbar. Within the Library the tag
> is listed under Recent tags.
>
This is the same query and I believe, that after restart you will see it on the toolbar too. I have created a new bug 420261 for the refreshing problem.
Status: REOPENED → RESOLVED
Closed: 17 years ago → 17 years ago
Resolution: --- → FIXED
Comment 16•17 years ago
|
||
Er, isn't sorting by lastModified show tags from which item were removed as recent? Why is dateAdded not working?
| Assignee | ||
Comment 17•17 years ago
|
||
dateAdded is the time, when the tag container has been created. So adding new links to the tag would not change it. lastModified is really modified on removal too, so if you would remove tag from the bookmark and there will still be something marked with this tag, the tag would show as most recent (someone could consider this ok).
May be the best would be to use max(dateAdded) of the items having the tag.
SELECT null, 'place:type=%ld&queryType=%d&sort=%ld&folder=' || f.id,
f.title, null, null, null, null, null, null,
max(i.dateAdded), max(i.lastModified)
FROM moz_bookmarks f JOIN moz_bookmarks i ON f.id = i.parent
WHERE f.parent = %ld
GROUP BY f.id
There is a little problem, that we would need two queries one with max and the other with min.
Comment 18•17 years ago
|
||
verified with:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre)
Gecko/2008032106 Minefield/3.0b5pre
and
Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; en-US; rv:1.9b5pre)
Gecko/2008032104 Minefield/3.0b5pre
Status: RESOLVED → VERIFIED
Comment 19•16 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•