Bug 419866 - ""Recent Tags" list in smart bookmarks no longer seems to be working" [p=ondrej@allpeers.com (Ondrej Brablc) r=dietrich a1.9b4=beltzner]